--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Банно гостинично-игровой комплекс Фламинго</title>
+		<title>Банно гостинично-игровой комплекс Фламинго в Ижевске</title>
 		
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
 		<meta name="keywords" content="сауна ижевск, аренда коттеджа ижевск, баня, снять баню ижевск, аренда ижевск, гостиница ижевск, праздник в ижевске, аренда, коттедж, сауна, баня, бассейн, сдается, посуточно, на час," />
